--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         tools:replace="android:theme"
         tools:targetApi="31">
         <service android:name=".service.UploadService" />
+        <service android:name=".service.FileUploadService" />
         <activity
             android:name=".views.activity.MainActivity"
             android:exported="true">
