--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
@@ -38,6 +39,7 @@
             android:name="ScopedStorage"
             android:value="true" />
 
+        <service android:name=".service.BackupService" />
         <service android:name=".service.UploadService" />
         <service android:name=".service.DownloadService" />
 
@@ -53,13 +55,15 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name="com.jason.cloud.drive.views.activity.VideoPreviewActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|screenLayout"
-            android:resizeableActivity="true"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity"
-            tools:targetApi="n" />
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
     </application>
 
 </manifest>
