添加APlayer扩展库

--- a/settings.gradle
+++ b/settings.gradle
@@ -33,3 +33,4 @@ include ':theme'
 include ':videoview'
 include ':videoview-exo-extension'
 include ':extension'
+include ':videoview-aplayer-extension'
