--- a/videoview/src/main/AndroidManifest.xml
+++ b/videoview/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         <activity
             android:name=".activity.VideoPreviewActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|screenLayout"
+            android:hardwareAccelerated="true"
             android:resizeableActivity="true"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"
