--- a/media3/src/main/AndroidManifest.xml
+++ b/media3/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
             android:name=".activity.VideoPlayActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|screenLayout"
             android:exported="true"
-            android:screenOrientation="portrait"
+            android:hardwareAccelerated="true"
             android:theme="@style/VideoPlayerTheme" />
     </application>
 
