--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         tools:replace="android:theme"
         tools:targetApi="31">
         <activity
+            android:name=".views.activity.MediaCastActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.activity.FolderBrowseActivity"
             android:exported="false" />
 
