--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,10 +33,16 @@
         tools:replace="android:theme"
         tools:targetApi="31">
         <activity
+            android:name=".views.activity.TaskUploadActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.activity.TaskDownloadActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.activity.MediaCastActivity"
             android:exported="false" />
         <activity
-            android:name=".views.activity.FolderBrowseActivity"
+            android:name=".views.activity.FileBrowserActivity"
             android:exported="false" />
 
         <meta-data
